bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:3: error: not enough arguments for method sleepIn: (weekday: Boolean, vacation: Boolean)Boolean.
Unspecified value parameter vacation.
  return (sleepIn(false),sleepIn(true))
                 ^SleepIn:3: error: not enough arguments for method sleepIn: (weekday: Boolean, vacation: Boolean)Boolean.
Unspecified value parameter vacation.
  return (sleepIn(false),sleepIn(true))
                                ^